# VirtualDecks_warrior

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  launch.json  tasks.json
.github/: copilot-instructions.md
.github/instructions/: audio-engine.instructions.md  build-system.instructions.md  copilot-instructions.md  library-data.instructions.md  ui-components.instructions.md
.github/prompts/: add-audio-effect.prompt.md  add-feature.prompt.md  add-ui-component.prompt.md  fix-bug.prompt.md  refactor.prompt.md
src/: BeatGrid.h  BeatGridConfig.cpp  BeatGridConfig.h  BpmAnalysisManager.cpp  BpmAnalysisManager.h  BpmDetector.cpp  BpmDetector.h  CMakeLists.txt  CustomLookAndFeel.cpp  CustomLookAndFeel.h  DJAudioPlayer.cpp  DJAudioPlayer.h  DeckGUI.cpp  DeckGUI.h  FileHasher.h  Library.cpp  Library.h  PlaylistComponent.cpp  Track.h  TrackDataCache.cpp  TrackDataCache.h  WaveformDisplay.cpp  WaveformDisplay.h  ZoomedWaveform.cpp
